# mavrik

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  mavrik.gemspec
exe/: mavrik
ext/mavrik/: Cargo.toml  extconf.rb
ext/mavrik/src/: client.rs  event_loop.rs  events.rs  io.rs  lib.rs  main.rs  main_rb.rs  mavrik.rs  runtime.rs  service.rs  sig.rs  signal_listener.rs  task_executor.rs  tcp_listener.rs
ext/mavrik/src/events/: events.rs  mod.rs  task.rs  task_id.rs
ext/mavrik/src/exe/: chan.rs  mod.rs  task_executor.rs  thread_main.rs
ext/mavrik/src/executor/: mod.rs  task_executor.rs  thread_main.rs
ext/mavrik/src/io/: client.rs  handle_tcp_stream.rs  mod.rs  tcp_listener.rs
ext/mavrik/src/mem/: memory.rs  mod.rs  tasks_in_memory.rs
ext/mavrik/src/messaging/: messages.rs  mod.rs  task.rs  task_id.rs
ext/mavrik/src/rb/: client.rs  client_submit_task.rs  connection.rs  constants.rs  define.rs  init.rs  main.rs  mod.rs  util.rs
ext/mavrik/src/store/: in_memory.rs  mod.rs  store.rs  store_state.rs
ext/mavrik/src/tcp/: client.rs  client_handler.rs  handle_tcp_stream.rs  listener.rs  mod.rs  tcp_listener.rs  util.rs
ext/mavrik/tests/: client_sends_data_over_tcp.rs
lib/: mavrik.rb  test.rb
lib/mavrik/: client.rb  config.rb  configurable.rb  connection.rb  execute_task.rb  executor.rb  future.rb  task.rb  test.rb  test_task.rb  version.rb
sig/: mavrik.rbs
spec/: mavrik_spec.rb  rspec_helper.rb
spec/features/: client_sends_task_to_server_spec.rb  mavrik_is_configurable_spec.rb  task_runs_and_can_be_awaited_spec.rb
spec/helpers/: server_helpers.rb
spec/mavrik/: client_spec.rb  execute_task_spec.rb  task_spec.rb
spec/performance/: send_1000_large_input_tasks_spec.rb
