# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
resolver = "2"
members = ["ext/mavrik"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
