[package]
name = "mavrik"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Biewer <biewers2@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
futures = { version = "0.3", features = ["default"] }
libc = "0.2"
log = "0.4"
magnus = { version = "0.7", features = ["embed"] }
rutie = "0.9" # Need to extract GVL (un)locking and put it here.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.40", features = ["rt", "io-util", "macros", "sync"] }
